2008-12-05  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-lucene-crash.patch: Update for b14.
	* patches/hotspot/original/icedtea-memory-limits.patch: Likewise.
	* patches/hotspot/original/icedtea-core-build.patch: Likewise.
	* patches/hotspot/original/icedtea-static-libstdc++.patch: Likewise.
	* patches/hotspot/original/icedtea-zero-build.patch: Likewise.
	* patches/hotspot/original/icedtea-shark-build.patch: Likewise.
	* patches/hotspot/original/icedtea-sparc64-linux.patch: Likewise.
	* Makefile.am (ICEDTEA_PATCHES): Remove icedtea-hotspot7-tests.patch,
	apply patches/icedtea-bytecodeInterpreterWithChecks.patch for original
	hotspot build.
	* patches/icedtea-hotspot7-tests.patch: Remove.

2008-12-04  Matthias Klose  <doko@ubuntu.com>

	* patches/hotspot/14.0b08/icedtea-sparc-buildfixes.patch: Readd
	lost chunks from icedtea-sparc.patch, fix build failure with gcc-4.3.
	* Makefile.am (ICEDTEA_PATCHES): Apply new patch.

2008-12-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Prefix the call to uname -m with
	the ${ARCH_PREFIX}.
	* acinclude.m4:
	Apply linux32 on s390 as well.

2008-12-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Prefix make invocations with
	ARCH_PREFIX.  Pass the host, target and
	build aliases through to the CACAO sub-configure.
	* acinclude.m4:
	Define ARCH_PREFIX to ${LINUX32} for
	x86 and ppc architectures.
	* configure.ac:
	Check for linux32.

2008-12-04  Gary Benson  <gbenson@redhat.com>

	* .hgignore: Ignore rt/javax/script/*.

2008-12-03  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Update for b14.
	* Makefile.am (ICEDTEA_PATCHES): Remove patches applied in b14.
	* patches/icedtea-4486841.patch, patches/icedtea-6484091.patch,
	patches/icedtea-6497740.patch, patches/icedtea-6588160.patch,
	patches/icedtea-6592792.patch, patches/icedtea-6721753.patch,
	patches/icedtea-6726779.patch, patches/icedtea-6733959.patch,
	patches/icedtea-6734167.patch, patches/icedtea-6755943.patch,